@@ -1,29 +1,41 @@
 /*******************************************************************************
-* (c) Copyright 2014 Hewlett-Packard Development Company, L.P.
-* All rights reserved. This program and the accompanying materials
-* are made available under the terms of the Apache License v2.0 which accompany this distribution.
-*
-* The Apache License is available at
-* http://www.apache.org/licenses/LICENSE-2.0
-*
-*******************************************************************************/
+ * (c) Copyright 2016 Hewlett-Packard Development Company, L.P.
+ * All rights reserved. This program and the accompanying materials
+ * are made available under the terms of the Apache License v2.0 which accompany this distribution.
+ *
+ * The Apache License is available at
+ * http://www.apache.org/licenses/LICENSE-2.0
+ *
+ *******************************************************************************/
 package io.cloudslang.lang.compiler.scorecompiler;
 
-import io.cloudslang.lang.compiler.modeller.model.*;
-import io.cloudslang.lang.entities.ExecutableType;
-import io.cloudslang.lang.entities.ScoreLangConstants;
+import io.cloudslang.lang.compiler.SlangTextualKeys;
+import io.cloudslang.lang.compiler.modeller.model.Action;
 import io.cloudslang.lang.compiler.modeller.model.Executable;
+import io.cloudslang.lang.compiler.modeller.model.Flow;
+import io.cloudslang.lang.compiler.modeller.model.Operation;
+import io.cloudslang.lang.compiler.modeller.model.Step;
 import io.cloudslang.lang.compiler.modeller.model.Workflow;
+import io.cloudslang.lang.entities.ExecutableType;
+import io.cloudslang.lang.entities.ResultNavigation;
+import io.cloudslang.lang.entities.ScoreLangConstants;
 import io.cloudslang.lang.entities.bindings.Argument;
 import io.cloudslang.lang.entities.bindings.Input;
 import io.cloudslang.lang.entities.bindings.Output;
 import io.cloudslang.lang.entities.bindings.Result;
-import io.cloudslang.lang.compiler.modeller.model.Action;
-import io.cloudslang.lang.compiler.modeller.model.Operation;
-import io.cloudslang.lang.compiler.modeller.model.Step;
-import io.cloudslang.lang.entities.ResultNavigation;
 import io.cloudslang.score.api.ExecutionPlan;
 import io.cloudslang.score.api.ExecutionStep;
+
+import java.io.Serializable;
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.Deque;
+import java.util.HashMap;
+import java.util.LinkedList;
+import java.util.List;
+import java.util.Map;
+import java.util.Set;
+
 import org.junit.Rule;
 import org.junit.Test;
 import org.junit.rules.ExpectedException;
@@ -32,12 +44,11 @@ import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.runners.MockitoJUnitRunner;
 
-import java.io.Serializable;
-import java.util.*;
-
 import static org.junit.Assert.assertEquals;
-import static org.mockito.Matchers.*;
+import static org.mockito.Matchers.anyListOf;
+import static org.mockito.Matchers.anyMapOf;
 import static org.mockito.Matchers.eq;
+import static org.mockito.Matchers.same;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
@@ -55,7 +66,7 @@ public class ExecutionPlanBuilderTest {
 
     private Set<String> systemPropertyDependencies = Collections.emptySet();
 
-    private Step createSimpleCompiledAsyncStep(String stepName) {
+    private Step createSimpleCompiledParallelStep(String stepName) {
         return createSimpleCompiledStep(stepName, true);
     }
 
@@ -67,7 +78,7 @@ public class ExecutionPlanBuilderTest {
         return createSimpleCompiledStep(stepName, false, navigationStrings);
     }
 
-    private Step createSimpleCompiledStep(String stepName, boolean isAsync) {
+    private Step createSimpleCompiledStep(String stepName, boolean isParallelLoop) {
         List<Map<String, String>> navigationStrings = new ArrayList<>();
         Map<String, String> successMap = new HashMap<>();
         successMap.put(ScoreLangConstants.SUCCESS_RESULT, ScoreLangConstants.SUCCESS_RESULT);
@@ -76,14 +87,14 @@ public class ExecutionPlanBuilderTest {
         navigationStrings.add(successMap);
         navigationStrings.add(failureMap);
 
-        return createSimpleCompiledStep(stepName, isAsync, navigationStrings);
+        return createSimpleCompiledStep(stepName, isParallelLoop, navigationStrings);
     }
 
-    private Step createSimpleCompiledStep(String stepName, boolean isAsync, List<Map<String, String>> navigationStrings) {
+    private Step createSimpleCompiledStep(String stepName, boolean isParallelLoop, List<Map<String, String>> navigationStrings) {
         Map<String, Serializable> preStepActionData = new HashMap<>();
 
-        if (isAsync) {
-            preStepActionData.put(ScoreLangConstants.ASYNC_LOOP_KEY, "value in values");
+        if (isParallelLoop) {
+            preStepActionData.put(SlangTextualKeys.PARALLEL_LOOP_KEY, "value in values");
         }
 
         Map<String, Serializable> postStepActionData = new HashMap<>();
@@ -95,7 +106,8 @@ public class ExecutionPlanBuilderTest {
                 null,
                 navigationStrings,
                 refId,
-                isAsync);
+                isParallelLoop,
+                false);
     }
 
     private List<Result> defaultFlowResults() {
@@ -109,7 +121,8 @@ public class ExecutionPlanBuilderTest {
         Map<String, Serializable> preExecActionData = executable.getPreExecActionData();
         String execName = executable.getName();
         List<Input> inputs = executable.getInputs();
-        when(stepFactory.createStartStep(eq(1L), same(preExecActionData), same(inputs), same(execName))).thenReturn(new ExecutionStep(1L));
+        when(stepFactory.createStartStep(eq(1L), same(preExecActionData), same(inputs), same(execName), eq(ExecutableType.FLOW))).thenReturn(new ExecutionStep(1L));
+        when(stepFactory.createStartStep(eq(1L), same(preExecActionData), same(inputs), same(execName), eq(ExecutableType.OPERATION))).thenReturn(new ExecutionStep(1L));
     }
 
     private void mockEndStep(Long stepId, Executable executable, ExecutableType executableType) {
@@ -124,14 +137,14 @@ public class ExecutionPlanBuilderTest {
         mockFinishStep(stepId, step, false);
     }
 
-    private void mockFinishAsyncStep(Long stepId, Step step) {
-        mockFinishStep(stepId, step, true);
-    }
-
-    private void mockFinishStep(Long stepId, Step step, boolean isAsync) {
+    private void mockFinishStep(Long stepId, Step step, boolean isParallelLoop) {
         Map<String, Serializable> postStepActionData = step.getPostStepActionData();
         String stepName = step.getName();
-        when(stepFactory.createFinishStepStep(eq(stepId), eq(postStepActionData), anyMapOf(String.class, ResultNavigation.class), eq(stepName), eq(isAsync))).thenReturn(new ExecutionStep(stepId));
+        when(stepFactory.createFinishStepStep(eq(stepId), eq(postStepActionData), anyMapOf(String.class, ResultNavigation.class), eq(stepName), eq(isParallelLoop))).thenReturn(new ExecutionStep(stepId));
+    }
+
+    private void mockFinishParallelLoopStep(Long stepId, Step step) {
+        mockFinishStep(stepId, step, true);
     }
 
     private void mockBeginStep(Long stepId, Step step) {
@@ -141,11 +154,11 @@ public class ExecutionPlanBuilderTest {
         when(stepFactory.createBeginStepStep(eq(stepId), anyListOf(Argument.class), eq(preStepActionData), eq(refId), eq(name))).thenReturn(new ExecutionStep(stepId));
     }
 
-    private void mockAddBranchesStep(Long stepId, Long nextStepID, Long branchBeginStepID, Step step, Flow flow) {
+    private void mockAddBranchesStep(Long stepId, Long nextStepId, Long branchBeginStepId, Step step, Flow flow) {
         Map<String, Serializable> preStepActionData = step.getPreStepActionData();
         String refId = flow.getId();
         String name = step.getName();
-        when(stepFactory.createAddBranchesStep(eq(stepId), eq(nextStepID), eq(branchBeginStepID), eq(preStepActionData), eq(refId), eq(name))).thenReturn(new ExecutionStep(stepId));
+        when(stepFactory.createAddBranchesStep(eq(stepId), eq(nextStepId), eq(branchBeginStepId), eq(preStepActionData), eq(refId), eq(name))).thenReturn(new ExecutionStep(stepId));
     }
 
     private void mockJoinBranchesStep(Long stepId, Step step) {
@@ -178,7 +191,7 @@ public class ExecutionPlanBuilderTest {
         assertEquals("different number of execution steps than expected", 3, executionPlan.getSteps().size());
         assertEquals("operation name is different than expected", operationName, executionPlan.getName());
         assertEquals("language name is different than expected", "CloudSlang", executionPlan.getLanguage());
-        assertEquals("begin step is different than expected", new Long(1), executionPlan.getBeginStep());
+        assertEquals("begin step is different than expected", Long.valueOf(1), executionPlan.getBeginStep());
     }
 
     @Test
@@ -207,15 +220,15 @@ public class ExecutionPlanBuilderTest {
         assertEquals("different number of execution steps than expected", 4, executionPlan.getSteps().size());
         assertEquals("flow name is different than expected", flowName, executionPlan.getName());
         assertEquals("language name is different than expected", "CloudSlang", executionPlan.getLanguage());
-        assertEquals("begin step is different than expected", new Long(1), executionPlan.getBeginStep());
+        assertEquals("begin step is different than expected", Long.valueOf(1), executionPlan.getBeginStep());
     }
 
     @Test
-    public void createSimpleFlowWithAsyncLoop() throws Exception {
+    public void createSimpleFlowWithParallelLoop() throws Exception {
         Map<String, Serializable> preFlowActionData = new HashMap<>();
         Map<String, Serializable> postFlowActionData = new HashMap<>();
         Deque<Step> steps = new LinkedList<>();
-        Step step = createSimpleCompiledAsyncStep("stepName");
+        Step step = createSimpleCompiledParallelStep("stepName");
         steps.add(step);
         Workflow workflow = new Workflow(steps);
         String flowName = "flowName";
@@ -231,9 +244,9 @@ public class ExecutionPlanBuilderTest {
         mockEndStep(0L, compiledFlow, ExecutableType.FLOW);
         mockAddBranchesStep(2L, 5L, 3L, step, compiledFlow);
         mockBeginStep(3L, step);
-        mockFinishAsyncStep(4L, step);
+        mockFinishParallelLoopStep(4L, step);
         mockJoinBranchesStep(5L, step);
-        ExecutionPlan executionPlan = executionPlanBuilder.createFlowExecutionPlan(compiledFlow);
+        final ExecutionPlan executionPlan = executionPlanBuilder.createFlowExecutionPlan(compiledFlow);
 
         verify(stepFactory).createAddBranchesStep(
                 eq(2L),
@@ -243,18 +256,18 @@ public class ExecutionPlanBuilderTest {
                 eq(compiledFlow.getId()),
                 eq(step.getName()));
         verify(stepFactory).createBeginStepStep(eq(3L), anyListOf(Argument.class), eq(step.getPreStepActionData()), eq(step.getRefId()), eq(step.getName()));
-        verify(stepFactory).createFinishStepStep(eq(4L), eq(step.getPostStepActionData()), anyMapOf(String.class, ResultNavigation.class), eq(step.getName()), eq(step.isAsync()));
+        verify(stepFactory).createFinishStepStep(eq(4L), eq(step.getPostStepActionData()), anyMapOf(String.class, ResultNavigation.class), eq(step.getName()), eq(step.isParallelLoop()));
         verify(stepFactory).createJoinBranchesStep(eq(5L), eq(step.getPostStepActionData()), anyMapOf(String.class, ResultNavigation.class), eq(step.getName()));
 
         assertEquals("different number of execution steps than expected", 6, executionPlan.getSteps().size());
         assertEquals("flow name is different than expected", flowName, executionPlan.getName());
         assertEquals("language name is different than expected", "CloudSlang", executionPlan.getLanguage());
-        assertEquals("begin step is different than expected", new Long(1), executionPlan.getBeginStep());
+        assertEquals("begin step is different than expected", Long.valueOf(1), executionPlan.getBeginStep());
     }
 
     @Test
     public void createFlowWithTwoSteps() throws Exception {
-        Deque<Step> steps = new LinkedList<>();
+        final Deque<Step> steps = new LinkedList<>();
         String secondStepName = "2ndStep";
         List<Map<String, String>> navigationStrings = new ArrayList<>();
         Map<String, String> successMap = new HashMap<>();
@@ -293,7 +306,7 @@ public class ExecutionPlanBuilderTest {
         assertEquals("different number of execution steps than expected", 6, executionPlan.getSteps().size());
         assertEquals("flow name is different than expected", flowName, executionPlan.getName());
         assertEquals("language name is different than expected", "CloudSlang", executionPlan.getLanguage());
-        assertEquals("begin step is different than expected", new Long(1), executionPlan.getBeginStep());
+        assertEquals("begin step is different than expected", Long.valueOf(1), executionPlan.getBeginStep());
     }
 
     @Test
